k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mnemosine
  labels:
    app.kubernetes.io/managed-by: argocd
