k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mnemosine
  namespace: mnemosine
  labels:
    app: mnemosine
spec:
  selector:
    app: mnemosine
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
